# sulekha_holtwinters_python

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py  setup.py.bak  test_holtwinters.ipynb
sulekha_holtwinters_python/: __init__.py  holtwinters.py  requirements.txt
sulekha_holtwinters_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_holtwinters.ipynb  test_holtwinters.py
